Also fix permissions when starting. Dropping irrelevant comments.

--- a/rootfs/etc/systemd/system/munge.service.d/override.conf
+++ b/rootfs/etc/systemd/system/munge.service.d/override.conf
@@ -1,9 +1,4 @@
 [Service]
-# Uncomment this to block the service from starting if running in a container
-# environment.
-# ExecStartPre=/warewulf/sbin/execstartpre.COMMON_BLOCK_CONTAINER_START.sh
-
-# Pre and Post hooks for our config management and control.
-# %N Is replaced with the name of the service, which should also 
-# be the name of the overlay if the overlay controls a service.
+# Self-correct ownership on our munge keys and config.
 ExecStartPre=+/usr/bin/chown munge:munge -R /etc/munge
+ExecStartPre=+/usr/bin/chmod 0600 /etc/munge/munge.key
